2012-03-06 Roman
- UI.VCAEngine, UI.Vision: New type "Full video" is added to primitive "Media".
    Type "Full video" is realised by help Phonon engine into UI.Vision.
- SYS: No execution mode is added to TCntrNode::nodeAt().
- UI.QTStarter: Application name for QT is set to PACKAGE_STRING.
- FIX:UI.VCAEngine: Limit to loaded file resources through VCAEngine is set to 100MB.
- FIX:UI.Vision, UI.WebVision: Limit to trends buffer into primitive "Diagram" is fixed for valsForPix use.


2012-03-04 Roman
- !!!!:SYS: Threadsafe in generic is made for user API objects and individual for: TVarObj, TArrayObj and XMLNodeObj.
    Automatic resource free is added to AutoHD on true return from AHDDisConnect().


2012-02-29 Roman
- SYS: Translation processing script is fixed for restore $(DESTDIR) to localedirectory.
- SYS: Spare includings is removed from *.am.
- FIX:SYS: Install disable for included modules is fixed for old automake (detected problem on version 1.8.3).


2012-02-28 Maxim,Roman
- UI.Vision: The QImage is used for the pixels' drawing during the combination of fill color and image for the primitive ElFigure.
- UI.Vision: The coordinate's showing under the mouse cursor is added to the status bar for the developing mode of the primitive ElFigure.
- UI.Vision: The QMdiArea is used instead if the obsolete QWorkspace for the building the mdi interface.
- UI.Vision: The "Full screen" is added to the "View" section of the main menu of development window.


2012-02-28 Roman
- FIX:SYS: Double RPATH set is fixed into "src_call".
- !:UI.QTStarter: QT command line parameters, like -qws and -style, is forwarded from OpenSCADA module's parameters like --qws and --style.
    Print --help for see all list.
- FIX:UI.Vision: Child widgets selection and edit frame, dots is disabled for no "Box" zero level widgets.


2012-02-22 Roman
- !!!:UI.VCAEngine: Link type "wdg:" between widgets direct set allow and two types absolute and relative is added.